# HistogramOccurrencesWords

./: .gitignore  CMakeLists.txt  README.md  main.cpp  options-handler.cpp  options-handler.hpp  parser-wrapper.cpp  parser-wrapper.hpp  provider.cpp  provider.hpp
core/: CMakeLists.txt  accumulator.cpp  accumulator.hpp  file-manager.cpp  file-manager.hpp  file-separator.cpp  file-separator.hpp  multi-index-container.hpp  thread-safe-queue.hpp  worker-pool.cpp  worker-pool.hpp
core/facrory-task/: factory-grammar-task.cpp  factory-grammar-task.hpp  factory-pure-task.cpp  factory-pure-task.hpp  factory-task-base.hpp
data/: source.txt
gui/: ControlBlock.qml  HistogramView.qml  ImageButton.qml  MessageBox.qml  colorizer.js  functions.js  main.qml  qml.qrc  qtquickcontrols2.conf
include/core/: accumulator.hpp  file-manager.hpp  file-separator.hpp  multi-index-container.hpp  thread-safe-queue.hpp  worker-pool.hpp
include/core/facrory-task/: factory-grammar-task.hpp  factory-pure-task.hpp  factory-task-base.hpp
